# rsmgclient

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  tarpaulin-report.html
.cargo-husky/hooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
benches/: connection.rs  connection_benchmark.rs
serverless/: run.sh
serverless/rsmgclient-cfworker/: Cargo.toml  wrangler.toml
src/: bindings.rs  connection.rs  error.rs  lib.rs  main.rs  mg_value.rs  value.rs
src/bindings/: mod.rs
src/connection/: mod.rs  tests.rs
src/cursor/: mod.rs
src/error/: mod.rs
src/mg_value/: mod.rs  tests.rs
src/value/: mod.rs  tests.rs
tests/: datetime_test.rs  integration_test.rs
tests/common/: mod.rs
