[package]
name = "rsmgclient"
version = "0.1.2"
description = "Memgraph database adapter for Rust programming language."
authors = ["Memgraph Contributors <tech@memgraph.com>"]
license = "Apache-2.0"
homepage = "https://memgraph.com"
repository = "https://github.com/memgraph/rsmgclient"
readme = "README.md"
documentation = "https://docs.rs/rsmgclient"
edition = "2018"
keywords = ["memgraph", "client", "driver", "database-adapter"]
categories = ["database", "api-bindings"]
exclude = [
    ".vscode/*",
    ".github/*",
]

[dependencies]
maplit = "1.0.2"

[dev-dependencies]
libc = "0.2"
serial_test = "0.4.0"

[build-dependencies]
bindgen = "0.58.1"
cmake = "0.1.45"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
