[package]
name = "rsmgclient"
version = "3.0.0"
description = "Memgraph database adapter for Rust programming language."
authors = ["Memgraph Contributors <tech@memgraph.com>"]
license = "Apache-2.0"
homepage = "https://memgraph.com"
repository = "https://github.com/memgraph/rsmgclient"
readme = "README.md"
documentation = "https://docs.rs/rsmgclient"
edition = "2024"
keywords = ["memgraph", "client", "driver", "database-adapter"]
categories = ["database", "api-bindings"]
exclude = [
    ".github/*"
]

[dependencies]
maplit = "1.0"
chrono = "0.4"
chrono-tz = "0.10"
thiserror = "2.0"

[dev-dependencies]
libc = "0.2"
serial_test = "3.2"
serde_json = "1.0"

[build-dependencies]
bindgen = "0.72"
cmake = "0.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
harness = false
name = "connection-benchmark"
path = "benches/connection.rs"
